<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">踢球么</string>
    <string name="me" translatable="false">我</string>
    <string name="my_about_ball" translatable="false">我的约球</string>
    <string name="my_order" translatable="false">我的订单</string>
    <string name="my_team" translatable="false">我的球队</string>
    <string name="ball_team" translatable="false">球队</string>
    <string name="my_message" translatable="false">我的消息</string>
    <string name="message" translatable="false">消息</string>
    <string name="my_dynamic_state" translatable="false">我的动态</string>
    <string name="my_as_the_referee" translatable="false">成为裁判</string>
    <string name="my_referee_record" translatable="false">我的裁判记录</string>
    <string name="apply_to_become_referee" translatable="false">申请成为裁判</string>
    <string name="invite_friend" translatable="false">邀请好友</string>
    <string name="invite_referee" translatable="false">邀请裁判</string>
    <string name="audit_result" translatable="false">审核结果</string>
    <string name="banding" translatable="false">已绑定</string>
    <string name="audit_result_error" translatable="false">审核结果异常</string>
    <string name="get_approved" translatable="false">通过审核</string>
    <string name="audit_failure" translatable="false">审核失败</string>
    <string name="audit_failure_hint" translatable="false">您提交的认证信息未通过审核</string>
    <string name="get_approved_hint" translatable="false">恭喜您通过审核，可以执法比赛</string>
    <string name="apply_to_be_a_judge_on_the_platform" translatable="false">在平台申请成为裁判</string>
    <string name="use_the_platform_to_enforce_the_game" translatable="false">通过平台去执法比赛</string>
    <string name="get_paid_from_the_platform" translatable="false">从平台上获得报酬</string>
    <string name="apply_referee_hint" translatable="false">注：执法报酬，每次比赛为80元，然后再根据裁判证件等级进行加成，
        三级裁判增加10%，以此类推，到国际级增加40%。 需要绑定微信号，报酬可提取到微信</string>
    <string name="please_invite_the_referee" translatable="false">请邀请裁判</string>
    <string name="not_find_this_order" translatable="false">没有找到该订单</string>
    <string name="not_find_this_topic" translatable="false">没有找到该话题</string>
    <string name="not_follow_content" translatable="false">暂无关注内容</string>
    <string name="not_find_this_referee" translatable="false">没有找到该裁判</string>
    <string name="not_find_this_venue_evaluate" translatable="false">没有找到该场馆评价</string>
    <string name="invite" translatable="false">邀请</string>
    <string name="inviting" translatable="false">已邀请</string>
    <string name="please_selector_ball_team" translatable="false">请选择球队</string>
    <string name="selector_ball_team" translatable="false">选择球队</string>
    <string name="ball_team_clothing_color" translatable="false">球衣颜色</string>
    <string name="invite_referee_hint" translatable="false">最多邀请三个，无人应邀由系统安排，如24小时内无人应邀，则由平台进行安排</string>
    <string name="top_month_amount_of_law_enforcement" translatable="false">上月执法量</string>
    <string name="referee_class" translatable="false">裁判等级</string>
    <string name="referee_class_s" translatable="false">裁判等级：%s</string>
    <string name="feedback_type" translatable="false">反馈类型</string>
    <string name="feedback_content_hint" translatable="false">说说您要反馈的信息吧~</string>
    <string name="selector_feedback_type" translatable="false">选择反馈类别</string>
    <string name="please_selector_feedback_type" translatable="false">请选择反馈类别</string>
    <string name="please_inout_feedback_content_or_image" translatable="false">请填写反馈内容或者上传反馈图片</string>
    <string name="please_selector_ball_clothing_color" translatable="false">请选择球衣颜色</string>
    <string name="you_sure_give_up_to_submit" translatable="false">您确定放弃提交意见反馈</string>
    <string name="selector_ball_clothing_color" translatable="false">选择球衣颜色</string>
    <string name="setting" translatable="false">设置</string>
    <string name="my_booking">我的订场</string>
    <string name="click_login_or_register" translatable="false">点击登录/注册</string>
    <string name="password_login" translatable="false">密码登录</string>
    <string name="welcome_back" translatable="false">欢迎回来</string>
    <string name="phone_number" translatable="false">手机号</string>
    <string name="message_code" translatable="false">验证码</string>
    <string name="gain_message_code" translatable="false">获取验证码</string>
    <string name="forget_the_password" translatable="false">忘记密码?</string>
    <string name="reset_passwords" translatable="false">重置密码</string>
    <string name="forget_password" translatable="false">忘记密码</string>
    <string name="uploading_fail_again" translatable="false">上传文件失败！请重试！</string>
    <string name="please_choose_team_logo" translatable="false">请选择球队logo</string>
    <string name="please_input_team_name" translatable="false">请输入球队队名</string>
    <string name="please_input_your_name" translatable="false">请填写您的姓名</string>
    <string name="please_update_your_referee_photo" translatable="false">请上传您穿着裁判服的照片</string>
    <string name="please_update_your_referee_grading_certificate" translatable="false">请上传您的裁判等级证书</string>
    <string name="you_sure_of_submission_of_accreditation" translatable="false">您确定放弃提交裁判资质认证</string>
    <string name="please_selector_referee_class" translatable="false">请选择裁判等级</string>
    <string name="please_selector_type" translatable="false">请选择球类类型</string>
    <string name="selector_referee_grade_book" translatable="false">选择裁判等级证书</string>
    <string name="please_input_number" translatable="false">请输入号码</string>
    <string name="please_selector_shirt_color" translatable="false">请选择球衣颜色</string>
    <string name="ball_team_details" translatable="false">球队信息</string>
    <string name="ball_team_member" translatable="false">球队成员</string>
    <string name="ball_shirt_color" translatable="false">球衣颜色</string>
    <string name="photo" translatable="false">照片</string>
    <string name="referee_photo_hint" translatable="false">请穿裁判服，自备哨子和红黄牌等装备</string>
    <string name="does_not_need_to_upload_id_photos" translatable="false">业余则不需要上传证件照片</string>
    <string name="click_update_photo" translatable="false">点击上传照片</string>
    <string name="click_update_referee_details_photo" translatable="false">上传裁判证件信息页照片</string>
    <string name="commit_succeed_please_sleep" translatable="false">提交成功，耐心等待审核</string>
    <string name="referee_certificate_grade" translatable="false">裁判证件等级</string>
    <string name="upload_again" translatable="false">重新上传</string>
    <string name="register_update" translatable="false">重新申请</string>
    <string name="into_my_record_center" translatable="false">进入我的记录</string>
    <string name="please_selector" translatable="false">请选择</string>
    <string name="record_the_action" translatable="false">记录赛况</string>
    <string name="password" translatable="false">密码</string>
    <string name="login" translatable="false">登录</string>
    <string name="my_focus" translatable="false">我的关注</string>
    <string name="my_fans" translatable="false">我的粉丝</string>
    <string name="please_selector_date" translatable="false">请选择日期</string>
    <string name="please_selector_time" translatable="false">请选择时间</string>
    <string name="wechat_login" translatable="false">微信登录</string>
    <string name="register_account" translatable="false">注册账号</string>
    <string name="phone_shortcut_login" translatable="false">手机快捷登录</string>
    <string name="must_permission_please_allow" translatable="false">读取内存卡为必要权限，请允许！</string>
    <string name="must_permission" translatable="false">请同意读取内存卡和定位权限，否则无法使用！</string>
    <string name="please_sure_phone_number" translatable="false">请输入正确手机号</string>
    <string name="regain_load_time" translatable="false">重新获取（%s）S</string>
    <string name="register" translatable="false">注册</string>
    <string name="next" translatable="false">下一步</string>
    <string name="input_message_code" translatable="false">输入验证码</string>
    <string name="setting_password" translatable="false">设置密码</string>
    <string name="not_under_six_length_password" translatable="false">不少于6位</string>
    <string name="phone_digits" translatable="false">0123456789</string>
    <string name="go_selector_session" translatable="false">去选择场次</string>
    <string name="image_text_details" translatable="false">图文详情</string>
    <string name="service_error" translatable="false">服务器异常</string>
    <string name="user_name_not_null" translatable="false">用户昵称不能为空！</string>
    <string name="region" translatable="false">所在地区</string>
    <string name="hint" translatable="false">提示</string>
    <string name="this_phone_is_register" translatable="false">该手机号已经注册</string>
    <string name="this_phone_not_register" translatable="false">该手机号没有注册</string>
    <string name="go_register" translatable="false">去注册</string>
    <string name="login_immediately" translatable="false">立即登录</string>
    <string name="gprs_not_open" translatable="false">GPRS没有打开，请打开它</string>
    <string name="go_open" translatable="false">去打开</string>
    <string name="hot" translatable="false">热</string>
    <string name="stick" translatable="false">置顶</string>
    <string name="the_venue_booking" translatable="false">场馆预定</string>
    <string name="about_ball_ball_friend" translatable="false">球友约球</string>
    <string name="all_game" translatable="false">全部赛事</string>
    <string name="there_are_no_related_events" translatable="false">没有相关的赛事！</string>
    <string name="recommend" translatable="false">推荐</string>
    <string name="about_recommend" translatable="false">相关推荐</string>
    <string name="name" translatable="false">姓名</string>
    <string name="post_about_ball" translatable="false">发起约球</string>
    <string name="post_ball_hint" translatable="false">约球功能会将您的约球信息自动发布至广场，开球前一天没有球队应邀，则退款并关闭此约球。</string>
    <string name="one_post_about_ball" translatable="false">1发起约球</string>
    <string name="two_sure_order" translatable="false">2确认订单</string>
    <string name="three_complete_pay" translatable="false">3完成支付</string>
    <string name="number_num">0123456789</string>
    <string name="the_goalkeeper" translatable="false">门将</string>
    <string name="defender" translatable="false">后卫</string>
    <string name="left_defender" translatable="false">左后卫</string>
    <string name="center_defender" translatable="false">中后卫</string>
    <string name="right_defender" translatable="false">右后卫</string>
    <string name="left_wing" translatable="false">左翼卫</string>
    <string name="right_wing" translatable="false">右翼卫</string>
    <string name="center_midfield" translatable="false">中场</string>
    <string name="short_loin" translatable="false">前腰</string>
    <string name="later_loin" translatable="false">后腰</string>
    <string name="left_center_midfield" translatable="false">左中场</string>
    <string name="right_center_midfield" translatable="false">右中场</string>
    <string name="left_wing_back" translatable="false">左边卫</string>
    <string name="right_wing_back" translatable="false">右边卫</string>
    <string name="forward" translatable="false">前锋</string>
    <string name="left_forward" translatable="false">左前锋</string>
    <string name="right_forward" translatable="false">右前锋</string>
    <string name="center_forward" translatable="false">中锋</string>
    <string name="left_wings" translatable="false">左边锋</string>
    <string name="right_wings" translatable="false">右边锋</string>
    <string name="site" translatable="false">场地</string>
    <string name="date" translatable="false">日期</string>
    <string name="time" translatable="false">时间</string>
    <string name="select_the_starting_team" translatable="false">选择发起球队</string>
    <string name="contact_way" translatable="false">联系方式</string>
    <string name="please_input_contact_way" translatable="false">请输入联系方式</string>
    <string name="sure_launch" translatable="false">确定发起</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="one">1</string>
</resources>