<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <com.example.item.weight.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        app:back_left_drawable="@mipmap/icon_back"
        app:back_text_padding_left="@dimen/default_margin"
        app:back_text_padding_right="@dimen/default_margin"
        app:center_data="@string/post_about_ball"
        app:center_text_color="@color/color_4"
        app:center_text_size="@dimen/size_18sp"
        app:title_show_bottom_line="true" />

    <com.example.item.weight.ItemView
        android:id="@+id/item_team"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:bottom_line_margin_left="@dimen/default_margin"
        app:bottom_line_margin_right="@dimen/default_margin"
        app:content_right_icon="@mipmap/icon_item_right"
        app:show_bottom_line="true"
        app:title_data="@string/select_the_starting_team" />

    <com.example.item.weight.ItemView
        android:id="@+id/item_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:bottom_line_margin_left="@dimen/default_margin"
        app:bottom_line_margin_right="@dimen/default_margin"
        app:content_right_icon="@mipmap/icon_item_right"
        app:show_bottom_line="true"
        app:title_data="@string/ball_team_clothing_color" />

    <com.example.item.weight.ItemView
        android:id="@+id/item_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:bottom_line_margin_left="@dimen/default_margin"
        app:bottom_line_margin_right="@dimen/default_margin"
        app:content_right_icon="@mipmap/icon_item_right"
        app:show_bottom_line="true"
        app:title_data="@string/date" />

    <com.example.item.weight.ItemView
        android:id="@+id/item_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:bottom_line_margin_left="@dimen/default_margin"
        app:bottom_line_margin_right="@dimen/default_margin"
        app:content_right_icon="@mipmap/icon_item_right"
        app:show_bottom_line="true"
        app:title_data="@string/time"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/contact_way"
            android:textColor="@color/color_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/acet_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_contact_way"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:textColor="@color/color_4"
            android:textColorHint="@color/colorFFA6A6A6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/size_14sp"
            tools:text="15079254622"
            android:gravity="center"
            android:inputType="phone"
            android:digits="@string/phone_digits"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.item.weight.ItemView
        android:id="@+id/item_site"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:bottom_line_margin_left="@dimen/default_margin"
        app:bottom_line_margin_right="@dimen/default_margin"
        app:content_right_icon="@mipmap/icon_item_right"
        app:show_bottom_line="true"
        app:show_top_line="true"
        app:title_data="@string/site"
        app:top_line_margin_left="@dimen/default_margin"
        app:top_line_margin_right="@dimen/default_margin" />

    <TextView
        android:id="@+id/tv_sures"
        style="@style/ButtonCenterText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:background="@drawable/shape_default_button"
        android:enabled="false"
        android:text="@string/sure_launch" />
</LinearLayout>