<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.example.item.weight.TitleView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            app:back_left_drawable="@mipmap/icon_back"
            app:back_text_padding_left="@dimen/default_margin"
            app:back_text_padding_right="@dimen/default_margin"
            app:center_data="@string/post_about_ball"
            app:center_text_color="@color/color_4"
            app:center_text_size="@dimen/size_18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/size_40dp"
            android:paddingRight="@dimen/size_40dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_post_about_ball"
                android:textColor="@color/color_4" />

            <View
                style="@style/HorizontalLine"
                android:layout_width="@dimen/size_30dp"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_sure_order"
                android:textColor="@color/colorFFA6A6A6" />

            <View
                style="@style/HorizontalLine"
                android:layout_width="@dimen/size_30dp"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_complete_pay"
                android:textColor="@color/colorFFA6A6A6" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFFFBFAFA"
            android:lineSpacingExtra="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_10dp"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/size_10dp"
            android:text="@string/post_ball_hint" />

        <com.example.item.weight.ItemView
            android:id="@+id/item_team"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            app:bottom_line_margin_left="@dimen/default_margin"
            app:bottom_line_margin_right="@dimen/default_margin"
            app:content_right_icon="@mipmap/icon_item_right"
            app:content_text_color="@color/colorFFA6A6A6"
            app:content_text_size="@dimen/size_14sp"
            app:show_bottom_line="true"
            app:title_data="@string/ball_team"
            app:title_text_color="@color/color_4"
            app:title_text_size="@dimen/size_14sp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <com.example.item.weight.ItemView
            android:id="@+id/item_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_55dp"
            app:bottom_line_margin_left="@dimen/default_margin"
            app:bottom_line_margin_right="@dimen/default_margin"
            app:content_right_icon="@mipmap/icon_item_right"
            app:content_text_color="@color/colorFFA6A6A6"
            app:content_text_size="@dimen/size_14sp"
            app:show_bottom_line="true"
            app:title_data="@string/ball_team_clothing_color"
            app:title_text_color="@color/color_4"
            app:title_text_size="@dimen/size_14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/invite_referee"
            android:textColor="@color/color_4"
            android:textSize="@dimen/size_17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_15dp"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/size_15dp"
            android:lineSpacingExtra="@dimen/size_5dp"
            android:text="@string/invite_referee_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="@dimen/default_margin"
                android:text="@string/name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/top_month_amount_of_law_enforcement"
                />

            <TextView
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/referee_class" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_referee"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp">
        <View
            style="@style/HorizontalLine"
          />
        <TextView
            android:id="@+id/tv_next"
            style="@style/ButtonCenterText"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_default_button"
            android:text="@string/next"
            android:enabled="false"
            />
    </RelativeLayout>
</LinearLayout>