<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_count"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/size_30dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_subtract"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="match_parent"
        android:background="@drawable/layer_click_left_six_radius_view"
        android:gravity="center"
        android:text="@string/subtract"
        android:textColor="@color/colorFF8C8C8C"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_num"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/shape_zero_radius_view"
        android:digits="@string/number_num"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        android:minWidth="@dimen/size_50dp"
        android:singleLine="true"
        android:text="@string/one"
        android:textColor="@color/color_4"
        android:textSize="@dimen/size_14sp"
        />

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="match_parent"
        android:background="@drawable/layer_click_right_six_radius_view"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/colorFF8C8C8C"
        android:textSize="14sp" />

</LinearLayout>