<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.example.item.weight.TitleView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        app:back_text_padding_left="@dimen/default_margin"
        app:back_text_padding_right="@dimen/default_margin"
        app:back_left_drawable="@mipmap/icon_back"
        app:center_text_color="@color/color_4"
        app:center_text_size="@dimen/size_18sp"
        app:center_data="@string/my_as_the_referee"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@mipmap/icon_apply_refree_body"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_40dp">
    <TextView
        android:layout_width="wrap_content"
        style="@style/SingLineTextView"
        android:drawableLeft="@mipmap/icon_apply_referee_1"
        android:text="@string/apply_to_be_a_judge_on_the_platform"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/size_15dp"
        android:textSize="@dimen/size_17sp"
        android:textColor="@color/color_4"
        />
    <TextView
        android:layout_width="wrap_content"
        style="@style/SingLineTextView"
        android:drawableLeft="@mipmap/icon_apply_referee_2"
        android:text="@string/use_the_platform_to_enforce_the_game"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/size_15dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:textSize="@dimen/size_17sp"
        android:textColor="@color/color_4"
        />
    <TextView
        android:layout_width="wrap_content"
        style="@style/SingLineTextView"
        android:drawableLeft="@mipmap/icon_apply_referee_3"
        android:text="@string/get_paid_from_the_platform"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/size_15dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:textSize="@dimen/size_17sp"
        android:textColor="@color/color_4"
        />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_12sp"
        android:textColor="@color/colorFFA6A6A6"
        android:text="@string/apply_referee_hint"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:lineSpacingExtra="@dimen/size_3dp"
        />
    <TextView
        style="@style/ButtonCenterText"
        android:layout_marginTop="@dimen/size_20dp"
        android:text="@string/apply_to_become_referee"/>
</LinearLayout>